--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # build artifacts
-./build/
-./cmake-build-debug/
+build/
+cmake-build-debug/
 debian/changelog
 debian/files
 debian/kodi-inputstream-mpd-dbg.debhelper.log
