LicensoNonce / _DEBUG / SPS/PPS-feed

--- a/wvdecrypter/CMakeLists.txt
+++ b/wvdecrypter/CMakeLists.txt
@@ -7,7 +7,7 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     endif()
 endif()
 
-add_definitions(-DUNICODE -D_UNICODE)
+add_definitions(-DUNICODE -D_UNICODE -D_DEBUG)
 
 project(wvdecrypter)
 
